--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # Add python code
 !ddpm_from_scratch
 !ddpm_from_scratch/models
+!ddpm_from_scratch/engines
 !ddpm_from_scratch/**/*.py
 !notebooks
 !notebooks/*.py
