--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ torchvision = ">=0.15"
 torchtyping = "^0.1.4"
 tqdm = "^4.64.1"
 einops = "^0.6.0"
+mypy = "^1.2.0"
 
 [tool.setuptools]
 packages = ["ddpm_from_scratch"]
