--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,22 @@
+[mypy]
+
+# same as "mypy --strict" (except for "--warn-unused-configs")
+check_untyped_defs = True
+disallow_any_generics = False
+disallow_any_unimported = False
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+no_implicit_optional = True
+strict_equality = True
+strict_optional = True
+warn_redundant_casts = True
+warn_return_any = True
+warn_unused_ignores = True
+show_error_codes = True
+namespace_packages = True
+explicit_package_bases = True
+# A lot of function calls in torch are untyped, but per-package overrides don't work, so we set it globally
+allow_untyped_calls = True
+
 [mypy-segretini_matplottini.*,tqdm,torch,torch.*,torchvision.*,torchtyping,seaborn,scipy,scipy.*,matplotlib.*,pandas,imageio.*]
 ignore_missing_imports = True
